JSON API character

--- a/index.html
+++ b/index.html
@@ -2,22 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Genshin Impact</title>
 
     <!-- //* FONT -->
-    <link
-      rel="preconnect"
-      href="https://fonts.googleapis.com"
-    />
-    <link
-      rel="preconnect"
-      href="https://fonts.gstatic.com"
-      crossorigin
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Serif+Telugu:wght@100..900&display=swap"
       rel="stylesheet"
@@ -31,11 +21,8 @@
       crossorigin="anonymous"
     />
 
-    <!-- //* Website icon -->
-    <link
-      rel="shortcut icon"
-      href="/src/assets/Other/Tab-logo.png"
-    />
+    <!-- //* WEBSITE FAVICON -->
+    <link rel="shortcut icon" href="./src/assets/other/Tab-logo.png" />
   </head>
   <body>
     <div id="root"></div>
@@ -44,9 +31,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script
-      type="module"
-      src="/src/main.jsx"
-    ></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
